# platform-engine-temp

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: platform-engine.md
.github/workflows/: destroy.yaml  provision_from_platform_yaml.yaml
devops/: Pulumi.dev.test-zero-trust-service.us-west-2.yaml  Pulumi.yaml  __main__.py  _scripts.py  cli.py  config.py  test-stack.yaml
devops/cache/: __init__.py  redis.py
devops/capabilities/: __init__.py  agentcore_runtime.py  cache.py  compute.py  context.py  database.py  dynamodb.py  ecs.py  eventbridge.py  foundation.py  lambda_functions.py  s3.py  (+5 more)
docs/: admin-console.md  capabilities.md  design-decisions.md  destroy-legacy-services.md  overview.md  platform-engine-v2-design.md  platform-engine-v2-spec.md  pulumi-kms-secrets-investigation.md  s3-and-agentcore-runtime-spec.md  schema-guide.md  spec.md
fixtures/: README.md  platform-agent-factory.yaml  platform-agentcore-only.yaml  platform-compute-agentcore.yaml  platform-compute-s3.yaml  platform-dynamodb-agentcore.yaml  platform-minimal.yaml  platform-s3-agentcore.yaml  platform-s3-only.yaml  platform-v2-test.yaml
preflight/: Dockerfile  README.md  verify.py
scripts/: check_endpoint.sh  check_workflow.sh  ensure_kms_metadata.py
tests/: __init__.py  conftest.py  test_cache.py  test_capability_agentcore_runtime.py  test_capability_cache.py  test_capability_compute.py  test_capability_database.py  test_capability_dynamodb.py  test_capability_eventbridge.py  test_capability_lambda.py  test_capability_s3.py  test_capability_service_discovery.py  test_capability_storage.py  test_capability_triggers.py  test_capability_webhook_gateway.py  test_compute.py  test_config.py  test_config_s3_agentcore.py  test_context.py  test_database.py  test_foundation.py  test_foundation_agentcore.py  test_iam.py  test_lambda.py  test_loadbalancer.py  test_networking.py  test_registry.py  test_service_discovery.py  test_shared_lookups.py  test_spec.py  test_spec_s3_agentcore.py  test_storage.py  test_triggers.py
(+31 files in other folders)
